Change history
--------------

Release Candidate 1
===================

- MR-125 testsupport doesn't handle posting to smart dispatcher controller 
  Fixed by Andrei Shires <andrei@internetware.co.uk>

- FormHelper: Now it can fill parameters with the values from the Request.Params

- FormHelper: fixed Checkbox behavior with databinder by adding a hidden 
  field with the same name but carrying the 'false' value. The false value
  can be overriden with a key 'falseValue' if you're working with a non-boolean
  
  For example
  
  FormHelper.CheckboxField("some.property")
  
  Will render
  
  <input type="checkbox" id="some_property" name="some.property" value="true" />
  <input type="hidden" id="some_propertyH" name="some.property" value="false" />


  FormHelper.CheckboxField("acceptDisclaimer", %{trueValue = 'accept', hiddenValue = 'reject'})
  
  Will render
  
  <input type="checkbox" id="acceptDisclaimer" name="acceptDisclaimer" value="accept" />
  <input type="hidden" id="acceptDisclaimerH" name="acceptDisclaimer" value="reject" />


- Applied Ernst Naezer's patch to allow MR to throw a descriptive
  exception message when two helpers are registered using the same key

- Added a hack to the WebFormsViewEngine to accomodate different behavior
  with respect to invoking PageParser.GetCompiledInstance on ASP.NET 2.0

- Added support for defaultValue attribute to FormHelper, which specificy
  what the value should be if the target evaluates to null.

- Added indexed properties support to FormHelper

  When the target is an array you can
  
    PropertyBag.Add("roles", Roles.FindAll());
    --
    FormHelper.TextField("roles[0].Id")
  
  Which will output
  
    <input type="text" id="roles_0_Id" name="roles[0].Id" value="1" />

  The indexed property can be nested

    PropertyBag.Add("user", User.Find(1));
    --
    FormHelper.TextField("user.roles[0].Id")

    <input type="text" id="user_roles_0_Id" name="user.roles[0].Id" value="1" />
